# code-soup

.vagrant/bundler/: global.sol
.vagrant/machines/default/virtualbox/: action_cloud_init  action_provision  action_set_name  index_uuid  private_key  synced_folders  vagrant_cwd
ansible/: learning-status-webpage.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/learning-status-webpage/tasks/: main.yml
ansible/roles/learning-status-webpage/templates/: web-web.service.j2
ansible/roles/redis/tasks/: main.yml
learning-status-webpage/: README.md  Vagrantfile  main.py  pyproject.toml
learning-status-webpage/.vagrant/machines/default/virtualbox/: action_cloud_init  action_provision  action_set_name  index_uuid  private_key  synced_folders  vagrant_cwd
learning-status-webpage/.vagrant/provisioners/ansible/inventory/: vagrant_ansible_inventory
